fixed text alignment

--- a/public/css/page.css
+++ b/public/css/page.css
@@ -122,6 +122,5 @@ google-map {
 
   .content {
     padding: 40px 0;
-    text-align: center;
   }
 }
